compiler/testData/diagnostics/tests/classObjects/classObjectInLocalClass.kt
fun test() {
    class A {
        default <!DEFAULT_OBJECT_NOT_ALLOWED!>object<!> {}
    }

    object {
        default <!DEFAULT_OBJECT_NOT_ALLOWED!>object<!> {}
    }
}